# alice

./: .gitignore  .pre-commit-config.yaml  ABOUT.md  README.md  TOOLS.md  fork.sh  gptme.toml  pyproject.toml
journal/: 2025-11-18-first-autonomous-run.md  2025-11-19-context-generation-documentation.md  2025-11-19-git-remote-setup.md  2025-11-19-knowledge-base-development.md  2025-11-19-knowledge-base-expansion.md  2025-11-19-knowledge-expansion.md  2025-11-19-task-cli-setup.md  2025-11-20-autonomous-session-1900.md  2025-11-20-infrastructure-path-fix.md  2025-11-20-mcp-process-isolation-investigation.md  2025-11-20-patch-whitespace-fix.md  2025-11-20-pr-ci-investigation.md  2025-11-20-server-default-model-fix.md  2025-11-20-session-blocker.md  2025-11-21-dspy-issue-draft.md  2025-11-21-dspy-test-fix.md  2025-11-21-dspy-test-monitoring.md  2025-11-21-knowledge-expansion.md  2025-11-21-pr-maintenance.md  2025-11-21-pr-monitoring.md  2025-11-21-pr-test-failure-analysis.md  2025-11-21-pr862-build-fix.md  2025-11-21-pr867-monitoring.md  2025-11-22-blocked-session.md  2025-11-22-pr-merges.md  2025-11-22-reasoning-program-tests.md  2025-11-23-initial-identity-draft.md  2025-11-23-pr-merge-verification.md
knowledge/: autonomous-operation-patterns.md  cascade-workflow.md  ci-failure-investigation.md  context-generation-system.md  dspy-test-metadata.md  error-handling-troubleshooting.md  error-recovery.md  file-operations.md  git-worktree-workflow.md  github-pr-review-workflow.md  journal-entry-patterns.md  session-completion.md  task-state-management.md  work-queue-management.md  (+3 more)
(+13 files in other folders)
